--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,300;0,400;0,500;0,600;0,700;0,&display=swap');
     </style>
-  <title>Landing Page</title>
+  <title>Leadson-Bank</title>
 </head>
 <body>
   <nav class="nav-bar">
